Tela das Reservas

--- a/clientes.html
+++ b/clientes.html
@@ -37,8 +37,7 @@
                     <img src="imagens/user_add.gif" alt="Novo Cadastro de Cliente"/>
                     Novo Cadastro
                 </a>
-                <div id="form-cad-cliente">
-                    <hr />
+                <div id="oculto">
                     <h2>Cadastro de Cliente</h2>
                     <form name="cadastroclientes" method="post" action="">
                         <fieldset>
@@ -125,10 +124,10 @@
                         <button type="reset">Cancelar</button>
                     </form>
                     <br style="clear:both"/>
-                    <hr />
                 </div>
                 <br style="clear:both"/>
                 <table>
+                    <caption>Clientes</caption>
                     <tr>
                         <th>Nome</th>
                         <th>Ultima Hospedagem</th>
@@ -206,7 +205,6 @@
                         <td><a href=""><img src="imagens/delete.png" alt="Apagar de Cadastro de Cliente"/> Excluir</a></td>
                     </tr>
                 </table>
-
             </div>
         </div>
         <footer>
