--- a/reservas.html
+++ b/reservas.html
@@ -5,11 +5,14 @@
         <title>Gerencimento de Estadias - Painel de Reservas</title>
         <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="css/style.css">
+        <link rel="stylesheet" type="text/css" href="css/tabela.css">
+        <link rel="stylesheet" type="text/css" href="css/form.css">
         <script type="text/javascript" src="js/jquery-1.8.1.min.js"></script>
+        <script type="text/javascript" src="js/funcoes.js"></script>
     </head>
     <body>
         <header>
-            <div id="banner">                
+            <div id="banner">
                 <img src="imagens/banner06.jpg" alt="banner06"/>
             </div>
             <div id="logo">
@@ -17,7 +20,7 @@
                     <img src="imagens/logo.jpg" alt="Logo Dino Consultoria" />
                     <h1>Gestão de Estadias</h1>
                     <p>Dino Consultoria</p>
-                </a>                
+                </a>
             </div>
         </header>
         <nav>
@@ -25,13 +28,149 @@
                 <li><a href="clientes.html">Clientes</a></li>
                 <li><a href="reservas.html">Reservas</a></li>
                 <li><a href="painel.html">Quadro de Apartamentos</a></li>
-                <li><a href="hospedagem.html">Hospedar</a></li>                
+                <li><a href="hospedagem.html">Hospedar</a></li>
             </ul>
         </nav>
         <div id="body">
             <div id="content">
-                <h1>Reservas</h1>                
-            </div>            
+                <a id="button">
+                    <img src="imagens/user_add.gif" alt="Novo Cadastro de Cliente"/>
+                    Nova Reserva
+                </a>
+                <div id="oculto">
+                    <form>
+                        <label>
+                            Nome:
+                        </label>
+                        <input type="text" name="nome" size="50"/>
+                        <label>
+                            Data Chegada:
+                        </label>
+                        <input type="date" name="data-chegada" />
+                        <label>
+                            Hora Chegada:
+                        </label>
+                        <input type="text" name="hora-chegada" />
+                        <label>
+                            Data Partida:
+                        </label>
+                        <input type="date" name="data-saida" />
+                        <label>
+                            Hora Saida:
+                        </label>
+                        <input type="text" name="hora-saida" />
+                        <br style="clear:both"/>
+                        <button type="submit">Reservar</button>
+                        <button type="reset">Cancelar</button>
+                    </form>
+                    <br style="clear:both"/>
+                </div>
+                <br style="clear:both"/>
+                <table>
+                    <caption>Reservas da Semana</caption>
+                    <thead>
+                        <tr>
+                            <th></th>
+                            <th>23/09</th>
+                            <th>24/09</th>
+                            <th>25/09</th>
+                            <th>26/09</th>
+                            <th>27/09</th>
+                            <th>28/09</th>
+                            <th>29/09</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>00:00h - 02:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>03:00h - 05:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>06:00h - 08:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>09:00h - 11:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>12:00h - 14:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>15:00h - 17:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>18:00h - 20:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td>21:00h - 23:59h</td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="8">
+                                <a href="">< Semana Anterior</a> | <a href="">Próxima Semana ></a>
+                            </td>                            
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
         </div>
         <footer>
             <p>Gerenciamento de Estadias. Dino Consultoria 2012</p>
